Refactor news.html structure and error handling
Updated the news page layout and improved error messages.

--- a/news.html
+++ b/news.html
@@ -8,65 +8,43 @@
 </head>
 <body>
 
-  <!-- Dynamic Header -->
-  <div id="header-placeholder"></div>
+  <header>
+    <h1>DailyScope News</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="news.html">News</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+        <li><a href="terms.html">Terms</a></li>
+        <li><a href="disclaimer.html">Disclaimer</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <main>
+  <main style="padding:20px;">
     <h2>Latest Headlines</h2>
     <div class="news-container" id="latestNews">
       <p>Loading latest news...</p>
     </div>
   </main>
 
-  <!-- Dynamic Footer -->
-  <div id="footer-placeholder"></div>
+  <footer>
+    <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+    <p>
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="terms.html">Terms of Service</a> |
+      <a href="disclaimer.html">Disclaimer</a>
+    </p>
+  </footer>
 
   <script>
-    // Function to load external HTML (works on GitHub Pages)
-    function loadHTML(containerId, filePath) {
-      const container = document.getElementById(containerId);
-      if (!container) return;
-
-      fetch(filePath)
-        .then(response => {
-          if (!response.ok) throw new Error("Network response was not ok");
-          return response.text();
-        })
-        .then(data => container.innerHTML = data)
-        .catch(error => {
-          console.error(`Error loading ${filePath}:`, error);
-          container.innerHTML = "";
-        });
-    }
-
-    // Load header and footer
-    loadHTML('header-placeholder', './header.html');
-    loadHTML('footer-placeholder', './footer.html');
-
-    // Highlight active menu item
-    window.addEventListener('DOMContentLoaded', () => {
-      const currentPage = window.location.pathname.split("/").pop();
-      document.querySelectorAll('.nav-link').forEach(link => {
-        if (link.getAttribute('href') === currentPage) link.classList.add('active');
-      });
-    });
-
-    // News API Integration
+    // 🔑 Your NewsAPI key
     const apiKey = 'AT1ZaPkvAn7bSb0m95LCi56tsqzof0cykHbuQCDj';
+
+    // 🌍 News API endpoint — top US headlines
     const endpoint = `https://newsapi.org/v2/top-headlines?country=us&pageSize=9&apiKey=${apiKey}`;
-
-    // Original commentary snippets
-    const commentarySnippets = [
-      "Experts say this development could impact global markets significantly.",
-      "Analysts suggest keeping an eye on this trend in the coming days.",
-      "This news highlights ongoing shifts in the industry landscape.",
-      "Readers should note that this event may have long-term implications.",
-      "Our editorial team emphasizes careful monitoring of this situation."
-    ];
-
-    function getRandomCommentary() {
-      return commentarySnippets[Math.floor(Math.random() * commentarySnippets.length)];
-    }
 
     async function fetchNews() {
       const container = document.getElementById('latestNews');
@@ -77,32 +55,26 @@
         const data = await response.json();
 
         if (data.status !== 'ok' || !data.articles.length) {
-          container.innerHTML = '<p>No news found. Try again later.</p>';
+          container.innerHTML = '<p>No news found. Please check back later.</p>';
           return;
         }
 
-        container.innerHTML = '';
+        container.innerHTML = ''; // Clear "loading" text
 
         data.articles.forEach(article => {
           const card = document.createElement('article');
           card.className = 'news';
-
-          // Add original commentary
-          const commentary = getRandomCommentary();
-
           card.innerHTML = `
             <img src="${article.urlToImage || 'https://via.placeholder.com/400x200'}" alt="News Image">
             <h3>${article.title || 'Untitled Article'}</h3>
             <p>${article.description || 'No description available.'}</p>
-            <p><em>Commentary:</em> ${commentary}</p>
             <a href="${article.url}" target="_blank">Read More</a>
           `;
-
           container.appendChild(card);
         });
       } catch (error) {
         console.error('Error fetching news:', error);
-        container.innerHTML = '<p style="color:red;">Error loading news. Please check your connection.</p>';
+        container.innerHTML = '<p style="color:red;">Error loading news. Please check your internet connection or API key.</p>';
       }
     }
 
