--- a/news.html
+++ b/news.html
@@ -25,8 +25,50 @@
 
   <main style="padding:20px;">
     <h2>Latest Headlines</h2>
-    <div class="news-container" id="latestNews">
-      <p>Loading latest news...</p>
+    <div class="news-container">
+      
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Global+Economy" alt="Global Economy">
+        <h3>Global Markets Rebound After Recent Decline</h3>
+        <p>Stock markets around the world show signs of recovery as investor confidence improves following new economic reports.</p>
+        <a href="#">Read More</a>
+      </article>
+
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Technology" alt="Technology News">
+        <h3>AI Innovations Reshape the Future of Work</h3>
+        <p>Artificial Intelligence continues to transform industries, improving efficiency and creating new job opportunities worldwide.</p>
+        <a href="#">Read More</a>
+      </article>
+
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Environment" alt="Environment">
+        <h3>New Climate Agreement Reached at Global Summit</h3>
+        <p>World leaders agree on new targets to reduce carbon emissions and transition toward renewable energy by 2030.</p>
+        <a href="#">Read More</a>
+      </article>
+
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Science" alt="Science News">
+        <h3>Space Researchers Discover Possible Signs of Water on Mars</h3>
+        <p>NASA scientists report fresh evidence that water may still exist beneath the Martian surface, sparking excitement among researchers.</p>
+        <a href="#">Read More</a>
+      </article>
+
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Health" alt="Health News">
+        <h3>Experts Urge for Healthier Lifestyle to Combat Stress</h3>
+        <p>Health experts highlight the importance of exercise, sleep, and nutrition to improve mental well-being amid global challenges.</p>
+        <a href="#">Read More</a>
+      </article>
+
+      <article class="news">
+        <img src="https://via.placeholder.com/400x200?text=Sports" alt="Sports">
+        <h3>National Team Wins Championship After Thrilling Final</h3>
+        <p>The championship match kept fans on the edge of their seats, ending in a historic victory for the national side.</p>
+        <a href="#">Read More</a>
+      </article>
+
     </div>
   </main>
 
@@ -39,47 +81,5 @@
     </p>
   </footer>
 
-  <script>
-    // 🔑 Your NewsAPI key
-    const apiKey = 'AT1ZaPkvAn7bSb0m95LCi56tsqzof0cykHbuQCDj';
-
-    // 🌍 News API endpoint — top US headlines
-    const endpoint = `https://newsapi.org/v2/top-headlines?country=us&pageSize=9&apiKey=${apiKey}`;
-
-    async function fetchNews() {
-      const container = document.getElementById('latestNews');
-      container.innerHTML = '<p>Loading latest news...</p>';
-
-      try {
-        const response = await fetch(endpoint);
-        const data = await response.json();
-
-        if (data.status !== 'ok' || !data.articles.length) {
-          container.innerHTML = '<p>No news found. Please check back later.</p>';
-          return;
-        }
-
-        container.innerHTML = ''; // Clear "loading" text
-
-        data.articles.forEach(article => {
-          const card = document.createElement('article');
-          card.className = 'news';
-          card.innerHTML = `
-            <img src="${article.urlToImage || 'https://via.placeholder.com/400x200'}" alt="News Image">
-            <h3>${article.title || 'Untitled Article'}</h3>
-            <p>${article.description || 'No description available.'}</p>
-            <a href="${article.url}" target="_blank">Read More</a>
-          `;
-          container.appendChild(card);
-        });
-      } catch (error) {
-        console.error('Error fetching news:', error);
-        container.innerHTML = '<p style="color:red;">Error loading news. Please check your internet connection or API key.</p>';
-      }
-    }
-
-    fetchNews();
-  </script>
-
 </body>
-</html>
+  </html>
