--- a/news.html
+++ b/news.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Latest News – DailyScope News</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Latest News – DailyScope South Africa</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -17,69 +17,63 @@
         <li><a href="about.html">About</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="privacy.html">Privacy</a></li>
-        <li><a href="terms.html">Terms</a></li>
-        <li><a href="disclaimer.html">Disclaimer</a></li>
       </ul>
     </nav>
   </header>
 
   <main style="padding:20px;">
-    <h2>Latest Headlines</h2>
-    <div class="news-container">
-      
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Global+Economy" alt="Global Economy">
-        <h3>Global Markets Rebound After Recent Decline</h3>
-        <p>Stock markets around the world show signs of recovery as investor confidence improves following new economic reports.</p>
-        <a href="#">Read More</a>
-      </article>
-
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Technology" alt="Technology News">
-        <h3>AI Innovations Reshape the Future of Work</h3>
-        <p>Artificial Intelligence continues to transform industries, improving efficiency and creating new job opportunities worldwide.</p>
-        <a href="#">Read More</a>
-      </article>
-
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Environment" alt="Environment">
-        <h3>New Climate Agreement Reached at Global Summit</h3>
-        <p>World leaders agree on new targets to reduce carbon emissions and transition toward renewable energy by 2030.</p>
-        <a href="#">Read More</a>
-      </article>
-
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Science" alt="Science News">
-        <h3>Space Researchers Discover Possible Signs of Water on Mars</h3>
-        <p>NASA scientists report fresh evidence that water may still exist beneath the Martian surface, sparking excitement among researchers.</p>
-        <a href="#">Read More</a>
-      </article>
-
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Health" alt="Health News">
-        <h3>Experts Urge for Healthier Lifestyle to Combat Stress</h3>
-        <p>Health experts highlight the importance of exercise, sleep, and nutrition to improve mental well-being amid global challenges.</p>
-        <a href="#">Read More</a>
-      </article>
-
-      <article class="news">
-        <img src="https://via.placeholder.com/400x200?text=Sports" alt="Sports">
-        <h3>National Team Wins Championship After Thrilling Final</h3>
-        <p>The championship match kept fans on the edge of their seats, ending in a historic victory for the national side.</p>
-        <a href="#">Read More</a>
-      </article>
-
+    <h2>Latest South African Headlines</h2>
+    <div class="news-container" id="latestNews">
+      <p>Loading latest news...</p>
     </div>
   </main>
 
   <footer>
     <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
-    <p>
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms of Service</a> |
-      <a href="disclaimer.html">Disclaimer</a>
-    </p>
   </footer>
+
+  <script>
+    // 🔑 Your working NewsAPI key
+    const apiKey = '67cf1181fa4e46dab6dd0f97b92874b1';
+
+    // 🇿🇦 Fetch South African news (you can change 'za' to 'us' or any other country code)
+    const endpoint = `https://newsapi.org/v2/top-headlines?country=za&pageSize=9&apiKey=${apiKey}`;
+
+    async function fetchNews() {
+      const container = document.getElementById('latestNews');
+      container.innerHTML = '<p>Loading latest news...</p>';
+
+      try {
+        const response = await fetch(endpoint);
+        const data = await response.json();
+
+        if (data.status !== 'ok' || !data.articles || data.articles.length === 0) {
+          container.innerHTML = '<p>No news found. Try again later.</p>';
+          return;
+        }
+
+        container.innerHTML = ''; // clear old content
+
+        data.articles.forEach(article => {
+          const card = document.createElement('article');
+          card.className = 'news';
+          card.innerHTML = `
+            <img src="${article.urlToImage || 'https://via.placeholder.com/400x200?text=No+Image'}" alt="News Image">
+            <h3>${article.title || 'Untitled Article'}</h3>
+            <p>${article.description || 'No description available.'}</p>
+            <a href="${article.url}" target="_blank">Read More</a>
+          `;
+          container.appendChild(card);
+        });
+
+      } catch (error) {
+        console.error('Error fetching news:', error);
+        container.innerHTML = '<p style="color:red;">Error loading news. Please check your connection.</p>';
+      }
+    }
+
+    fetchNews();
+  </script>
 
 </body>
   </html>
