--- a/about.html
+++ b/about.html
@@ -1,47 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About – DailyScope News</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .hero {
+        background: #002244 url('hero.jpg') center/cover no-repeat;
+        color: white;
+        text-align: center;
+        padding: 100px 20px;
+    }
+    .hero h2 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    }
+    .hero p {
+        font-size: 1.2em;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Dynamic Header -->
-  <div id="header-placeholder"></div>
+<header>
+  <h1>DailyScope News</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a class="active" href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="privacy.html">Privacy</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main style="padding:20px; max-width:800px; margin:auto;">
-    <h2>About DailyScope News</h2>
-    <p>Welcome to DailyScope News, your go-to source for breaking stories and insightful journalism. We deliver accurate, unbiased, and timely information from around the world.</p>
-    <p>Founded in 2025, our mission is to inform, inspire, and empower readers through high-quality reporting. Our editorial team is dedicated to bringing you the latest news, analysis, and opinions in an easy-to-read format.</p>
-    <p>We value our readers and welcome your feedback to help us improve and provide the most relevant news content.</p>
-  </main>
+<section class="hero">
+  <h2>About DailyScope News</h2>
+  <p>Learn more about our mission and team.</p>
+</section>
 
-  <!-- Dynamic Footer -->
-  <div id="footer-placeholder"></div>
+<main style="padding:20px;">
+  <p>Welcome to DailyScope News, your go-to source for breaking stories and insightful journalism. We deliver accurate, unbiased, and timely information from around the world.</p>
+  <p>Founded in 2025, our mission is to inform, inspire, and empower readers through high-quality reporting.</p>
+</main>
 
-  <script>
-    function loadHTML(containerId, filePath) {
-      const container = document.getElementById(containerId);
-      if (!container) return;
-
-      fetch(filePath)
-        .then(response => response.ok ? response.text() : "")
-        .then(data => container.innerHTML = data)
-        .catch(() => container.innerHTML = "");
-    }
-
-    loadHTML('header-placeholder', './header.html');
-    loadHTML('footer-placeholder', './footer.html');
-
-    window.addEventListener('DOMContentLoaded', () => {
-      const currentPage = window.location.pathname.split("/").pop();
-      document.querySelectorAll('.nav-link').forEach(link => {
-        if (link.getAttribute('href') === currentPage) link.classList.add('active');
-      });
-    });
-  </script>
+<footer>
+  <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+  <div style="margin-top:10px;">
+    <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+       style="display:inline-block;background:#ff6600;color:#fff;padding:8px 15px;border-radius:5px;text-decoration:none;font-weight:bold;">
+      ☕ Buy Me a Coffee
+    </a>
+    <a href="privacy.html" style="margin-left:15px;color:#fff;text-decoration:underline;">Privacy</a>
+    <a href="terms.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Terms</a>
+    <a href="disclaimer.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Disclaimer</a>
+  </div>
+</footer>
 
 </body>
 </html>
