--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact – DailyScope News</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .hero {
+        background: #002244 url('hero.jpg') center/cover no-repeat;
+        color: white;
+        text-align: center;
+        padding: 100px 20px;
+    }
+    .hero h2 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    }
+    .hero p {
+        font-size: 1.2em;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Dynamic Header -->
-  <div id="header-placeholder"></div>
+<header>
+  <h1>DailyScope News</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a class="active" href="contact.html">Contact</a></li>
+      <li><a href="privacy.html">Privacy</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main style="padding:20px; max-width:600px; margin:auto;">
-    <h2>Contact Us</h2>
-    <p>If you have any inquiries, suggestions, or partnerships, please reach out via the form below:</p>
+<section class="hero">
+  <h2>Contact Us</h2>
+  <p>We’d love to hear from you.</p>
+</section>
 
-    <form action="https://formspree.io/f/xwpaerjp" method="POST">
+<main style="padding:20px;">
+  <p>If you have any inquiries, suggestions, or partnerships, please reach out via the form below:</p>
+
+  <form action="https://formspree.io/f/xwpaerjp" method="post" style="max-width:400px;margin:auto;">
       <label for="name">Name:</label><br>
       <input type="text" id="name" name="name" required><br><br>
 
@@ -26,42 +57,21 @@
       <textarea id="message" name="message" rows="5" required></textarea><br><br>
 
       <button type="submit">Send Message</button>
-    </form>
-  </main>
+  </form>
+</main>
 
-  <!-- Dynamic Footer -->
-  <div id="footer-placeholder"></div>
-
-  <script>
-    // Function to load external HTML (works on GitHub Pages)
-    function loadHTML(containerId, filePath) {
-      const container = document.getElementById(containerId);
-      if (!container) return;
-
-      fetch(filePath)
-        .then(response => {
-          if (!response.ok) throw new Error("Network response was not ok");
-          return response.text();
-        })
-        .then(data => container.innerHTML = data)
-        .catch(error => {
-          console.error(`Error loading ${filePath}:`, error);
-          container.innerHTML = "";
-        });
-    }
-
-    // Load header and footer
-    loadHTML('header-placeholder', './header.html');
-    loadHTML('footer-placeholder', './footer.html');
-
-    // Highlight active menu item
-    window.addEventListener('DOMContentLoaded', () => {
-      const currentPage = window.location.pathname.split("/").pop();
-      document.querySelectorAll('.nav-link').forEach(link => {
-        if (link.getAttribute('href') === currentPage) link.classList.add('active');
-      });
-    });
-  </script>
+<footer>
+  <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+  <div style="margin-top:10px;">
+    <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+       style="display:inline-block;background:#ff6600;color:#fff;padding:8px 15px;border-radius:5px;text-decoration:none;font-weight:bold;">
+      ☕ Buy Me a Coffee
+    </a>
+    <a href="privacy.html" style="margin-left:15px;color:#fff;text-decoration:underline;">Privacy</a>
+    <a href="terms.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Terms</a>
+    <a href="disclaimer.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Disclaimer</a>
+  </div>
+</footer>
 
 </body>
 </html>
