--- a/index.html
+++ b/index.html
@@ -1,80 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DailyScope News</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DailyScope News – Home</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    /* Hero Section */
+    .hero {
+        background: #002244 url('hero.jpg') center/cover no-repeat;
+        color: white;
+        text-align: center;
+        padding: 100px 20px;
+    }
+
+    .hero h2 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    }
+
+    .hero p {
+        font-size: 1.2em;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Dynamic Header -->
-  <div id="header-placeholder"></div>
+  <header>
+    <h1>DailyScope News</h1>
+    <nav>
+      <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="news.html">News</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- Hero Section -->
   <section class="hero">
     <h2>Breaking News – Updated in Real Time</h2>
-    <p>Stay informed with the latest headlines from around the world.</p>
+    <p>Stay informed with the latest headlines from South Africa and around the world.</p>
   </section>
 
-  <main class="news-container" id="homeNews">
-    <!-- Static news articles with original commentary -->
-    <article class="news">
-      <img src="https://via.placeholder.com/400x200" alt="Headline">
-      <h3>Global Markets Rally Amid Economic Recovery</h3>
-      <p>Investors remain optimistic as markets show signs of recovery worldwide.</p>
-      <p><em>Commentary:</em> Analysts suggest monitoring key market indicators to track ongoing trends.</p>
-      <a href="news.html">Read More</a>
-    </article>
-
-    <article class="news">
-      <img src="https://via.placeholder.com/400x200" alt="Headline">
-      <h3>Technology: AI Revolutionizes the Workplace</h3>
-      <p>Artificial Intelligence is transforming industries at an unprecedented rate.</p>
-      <p><em>Commentary:</em> Experts believe businesses adopting AI early may gain competitive advantages.</p>
-      <a href="news.html">Read More</a>
-    </article>
-
-    <article class="news">
-      <img src="https://via.placeholder.com/400x200" alt="Headline">
-      <h3>Global Climate Initiatives Gain Momentum</h3>
-      <p>New international agreements are pushing for sustainable energy adoption.</p>
-      <p><em>Commentary:</em> Environmental analysts highlight the importance of these initiatives for long-term sustainability.</p>
-      <a href="news.html">Read More</a>
-    </article>
+  <main style="padding:20px;">
+    <h2>Latest Headlines</h2>
+    <div class="news-container" id="homeNews">
+      <p>Loading latest news...</p>
+    </div>
   </main>
 
-  <!-- Dynamic Footer -->
-  <div id="footer-placeholder"></div>
+  <footer>
+    <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+    <div style="margin-top:10px;">
+      <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+         style="display:inline-block;background:#ff6600;color:#fff;padding:8px 15px;border-radius:5px;text-decoration:none;font-weight:bold;">
+        ☕ Buy Me a Coffee
+      </a>
+      <a href="privacy.html" style="margin-left:15px;color:#fff;text-decoration:underline;">Privacy</a>
+      <a href="terms.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Terms</a>
+      <a href="disclaimer.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Disclaimer</a>
+    </div>
+  </footer>
 
   <script>
-    // Function to load external HTML (works on GitHub Pages)
-    function loadHTML(containerId, filePath) {
-      const container = document.getElementById(containerId);
-      if (!container) return;
+    const apiKey = '67cf1181fa4e46dab6dd0f97b92874b1';
+    const endpoint = `https://newsapi.org/v2/everything?q=South%20Africa&language=en&pageSize=6&sortBy=publishedAt&apiKey=${apiKey}`;
+    const fallbackImage = 'https://via.placeholder.com/400x200?text=No+Image';
 
-      fetch(filePath)
-        .then(response => {
-          if (!response.ok) throw new Error("Network response was not ok");
-          return response.text();
-        })
-        .then(data => container.innerHTML = data)
-        .catch(error => {
-          console.error(`Error loading ${filePath}:`, error);
-          container.innerHTML = "";
+    async function fetchHomeNews() {
+      const container = document.getElementById('homeNews');
+      container.innerHTML = '<p>Loading latest news...</p>';
+
+      try {
+        const response = await fetch(endpoint);
+        const data = await response.json();
+
+        if (data.status !== 'ok' || !data.articles || data.articles.length === 0) {
+          container.innerHTML = '<p>No news found. Try again later.</p>';
+          return;
+        }
+
+        container.innerHTML = '';
+
+        data.articles.forEach(article => {
+          const card = document.createElement('article');
+          card.className = 'news';
+          const imageURL = article.urlToImage ? article.urlToImage : fallbackImage;
+          card.innerHTML = `
+            <img src="${imageURL}" alt="News Image" onerror="this.onerror=null;this.src='${fallbackImage}';">
+            <h3>${article.title || 'Untitled Article'}</h3>
+            <p>${article.description || 'No description available.'}</p>
+            <p><strong>Our Take:</strong> This article highlights an important development in South Africa. Stay informed with DailyScope News for expert commentary and insights.</p>
+            <a href="${article.url}" target="_blank">Read More</a>
+          `;
+          container.appendChild(card);
         });
+
+      } catch (error) {
+        console.error('Error fetching home news:', error);
+        container.innerHTML = '<p style="color:red;">Error loading news. Please check your connection.</p>';
+      }
     }
 
-    // Load header and footer
-    loadHTML('header-placeholder', './header.html');
-    loadHTML('footer-placeholder', './footer.html');
-
-    // Highlight active menu item
-    window.addEventListener('DOMContentLoaded', () => {
-      const currentPage = window.location.pathname.split("/").pop();
-      document.querySelectorAll('.nav-link').forEach(link => {
-        if (link.getAttribute('href') === currentPage) link.classList.add('active');
-      });
-    });
+    fetchHomeNews();
   </script>
 
 </body>
