--- a/terms.html
+++ b/terms.html
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Terms of Service – DailyScope News</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Terms – DailyScope News</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    .hero {
+        background: #002244 url('hero.jpg') center/cover no-repeat;
+        color: white;
+        text-align: center;
+        padding: 100px 20px;
+    }
+    .hero h2 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
+    }
+    .hero p {
+        font-size: 1.2em;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+    }
+  </style>
 </head>
 <body>
 
-  <header>
-    <h1>DailyScope News</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-        <li><a class="active" href="terms.html">Terms</a></li>
-        <li><a href="disclaimer.html">Disclaimer</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1>DailyScope News</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">News</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a class="active" href="terms.html">Terms</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <main style="padding:20px; max-width:800px; margin:auto;">
-    <h2>Terms of Service</h2>
+<section class="hero">
+  <h2>Terms of Use</h2>
+  <p>Please read our terms carefully.</p>
+</section>
 
-    <p>Welcome to DailyScope News. By accessing this website, you agree to comply with and be bound by the following terms and conditions of use. Please read these terms carefully before using our website.</p>
+<main style="padding:20px;">
+  <p>By accessing this website, you agree to comply with all applicable laws and regulations. DailyScope News provides content for informational purposes only. We are not responsible for actions taken based on the information provided.</p>
+</main>
 
-    <h3>1. Acceptance of Terms</h3>
-    <p>By using this website, you agree to these Terms of Service. If you do not agree with any part of these terms, please do not use our website.</p>
-
-    <h3>2. Use of Content</h3>
-    <p>All materials on this website, including articles, graphics, and layout, are for informational purposes only. You may not reproduce, distribute, or exploit any part of the website without prior written permission.</p>
-
-    <h3>3. External Links</h3>
-    <p>Our website may contain links to external websites. We are not responsible for the content or availability of these external sites.</p>
-
-    <h3>4. User Conduct</h3>
-    <p>You agree to use the site only for lawful purposes and in a way that does not infringe on the rights of others or restrict their use of the site.</p>
-
-    <h3>5. Disclaimer of Warranties</h3>
-    <p>The information on this site is provided “as is” without any warranties. We make no representations or warranties regarding the accuracy or completeness of any information provided.</p>
-
-    <h3>6. Limitation of Liability</h3>
-    <p>DailyScope News shall not be held liable for any direct, indirect, incidental, or consequential damages arising out of the use or inability to use this website.</p>
-
-    <h3>7. Changes to Terms</h3>
-    <p>We reserve the right to update or modify these terms at any time without prior notice. Your continued use of the site constitutes acceptance of the updated terms.</p>
-
-    <p>Last updated: November 2025</p>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
-    <p>
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="terms.html">Terms of Service</a> |
-      <a href="disclaimer.html">Disclaimer</a>
-    </p>
-  </footer>
+<footer>
+  <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+  <div style="margin-top:10px;">
+    <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
+       style="display:inline-block;background:#ff6600;color:#fff;padding:8px 15px;border-radius:5px;text-decoration:none;font-weight:bold;">
+      ☕ Buy Me a Coffee
+    </a>
+    <a href="privacy.html" style="margin-left:15px;color:#fff;text-decoration:underline;">Privacy</a>
+    <a href="terms.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Terms</a>
+    <a href="disclaimer.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Disclaimer</a>
+  </div>
+</footer>
 
 </body>
 </html>
