--- a/index.html
+++ b/index.html
@@ -1,114 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DailyScope News – Home</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Hero Section */
-    .hero {
-        background: #002244 url('hero.jpg') center/cover no-repeat;
-        color: white;
-        text-align: center;
-        padding: 100px 20px;
-    }
-
-    .hero h2 {
-        font-size: 2.5em;
-        margin-bottom: 10px;
-        text-shadow: 2px 2px 4px rgba(0,0,0,0.6);
-    }
-
-    .hero p {
-        font-size: 1.2em;
-        text-shadow: 1px 1px 3px rgba(0,0,0,0.6);
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DailyScope News – Home</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header>
-    <h1>DailyScope News</h1>
-    <nav>
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Header -->
+    <header>
+        <h1>DailyScope News</h1>
+        <nav>
+            <ul>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="privacy.html">Privacy</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h2>Breaking News – Updated in Real Time</h2>
-    <p>Stay informed with the latest headlines from South Africa and around the world.</p>
-  </section>
+    <!-- Hero Section -->
+    <section class="hero" style="background: #002244 url('hero.jpg') center/cover no-repeat;">
+        <h2>Breaking Stories That Shape the Nation</h2>
+        <p>Stay informed with top headlines, exclusive insights, and our editor’s perspective.</p>
+    </section>
 
-  <main style="padding:20px;">
-    <h2>Latest Headlines</h2>
-    <div class="news-container" id="homeNews">
-      <p>Loading latest news...</p>
-    </div>
-  </main>
+    <!-- Static News Section -->
+    <main class="news-container">
+        <article class="news">
+            <img src="market.jpg" alt="Market News">
+            <h3>Global Markets Rally Amid Economic Recovery</h3>
+            <p>Investors show optimism as global markets recover after months of uncertainty.</p>
+            <a href="news.html">Read More</a>
+        </article>
 
-  <footer>
-    <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
-    <div style="margin-top:10px;">
-      <a href="https://www.buymeacoffee.com/YOUR_USERNAME" target="_blank" 
-         style="display:inline-block;background:#ff6600;color:#fff;padding:8px 15px;border-radius:5px;text-decoration:none;font-weight:bold;">
-        ☕ Buy Me a Coffee
-      </a>
-      <a href="privacy.html" style="margin-left:15px;color:#fff;text-decoration:underline;">Privacy</a>
-      <a href="terms.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Terms</a>
-      <a href="disclaimer.html" style="margin-left:10px;color:#fff;text-decoration:underline;">Disclaimer</a>
-    </div>
-  </footer>
+        <article class="news">
+            <img src="ai.jpg" alt="AI News">
+            <h3>AI Revolutionizes the Workplace</h3>
+            <p>Artificial Intelligence continues to reshape how industries approach productivity.</p>
+            <a href="news.html">Read More</a>
+        </article>
 
-  <script>
-    const apiKey = '67cf1181fa4e46dab6dd0f97b92874b1';
-    const endpoint = `https://newsapi.org/v2/everything?q=South%20Africa&language=en&pageSize=6&sortBy=publishedAt&apiKey=${apiKey}`;
-    const fallbackImage = 'https://via.placeholder.com/400x200?text=No+Image';
+        <article class="news">
+            <img src="climate.jpg" alt="Climate Change">
+            <h3>Climate Change Concerns Rise Worldwide</h3>
+            <p>Communities are adapting to climate challenges with innovation and resilience.</p>
+            <a href="news.html">Read More</a>
+        </article>
 
-    async function fetchHomeNews() {
-      const container = document.getElementById('homeNews');
-      container.innerHTML = '<p>Loading latest news...</p>';
+        <article class="news">
+            <img src="sports.jpg" alt="Sports">
+            <h3>National Teams Shine in Global Tournaments</h3>
+            <p>Recent sporting victories have united fans across the nation in celebration.</p>
+            <a href="news.html">Read More</a>
+        </article>
 
-      try {
-        const response = await fetch(endpoint);
-        const data = await response.json();
+        <article class="news">
+            <img src="economy.jpg" alt="Economy">
+            <h3>Economic Policies Aim to Boost Small Businesses</h3>
+            <p>New government initiatives target sustainable growth for entrepreneurs.</p>
+            <a href="news.html">Read More</a>
+        </article>
+    </main>
 
-        if (data.status !== 'ok' || !data.articles || data.articles.length === 0) {
-          container.innerHTML = '<p>No news found. Try again later.</p>';
-          return;
-        }
+    <!-- Commentary Section -->
+    <section style="padding:20px; background:#fff; margin:20px; border-radius:8px; box-shadow:0 0 8px rgba(0,0,0,0.1);">
+        <h2>Editor's Commentary</h2>
+        <p>
+            At <strong>DailyScope News</strong>, we go beyond headlines. Our editors offer thoughtful 
+            analysis on the trends that matter — from technology and policy to culture and innovation. 
+            Every story is carefully curated to keep you informed and inspired.
+        </p>
+    </section>
 
-        container.innerHTML = '';
-
-        data.articles.forEach(article => {
-          const card = document.createElement('article');
-          card.className = 'news';
-          const imageURL = article.urlToImage ? article.urlToImage : fallbackImage;
-          card.innerHTML = `
-            <img src="${imageURL}" alt="News Image" onerror="this.onerror=null;this.src='${fallbackImage}';">
-            <h3>${article.title || 'Untitled Article'}</h3>
-            <p>${article.description || 'No description available.'}</p>
-            <p><strong>Our Take:</strong> This article highlights an important development in South Africa. Stay informed with DailyScope News for expert commentary and insights.</p>
-            <a href="${article.url}" target="_blank">Read More</a>
-          `;
-          container.appendChild(card);
-        });
-
-      } catch (error) {
-        console.error('Error fetching home news:', error);
-        container.innerHTML = '<p style="color:red;">Error loading news. Please check your connection.</p>';
-      }
-    }
-
-    fetchHomeNews();
-  </script>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 DailyScope News. All Rights Reserved.</p>
+        <p>
+            <a href="terms.html" style="color:#fff; text-decoration:underline;">Terms</a> |
+            <a href="privacy.html" style="color:#fff; text-decoration:underline;">Privacy</a> |
+            <a href="disclaimer.html" style="color:#fff; text-decoration:underline;">Disclaimer</a>
+        </p>
+        <p>
+            <a href="https://www.buymeacoffee.com/" target="_blank" 
+               style="background:#ff6600; color:#fff; padding:6px 12px; border-radius:5px; text-decoration:none;">
+               ☕ Buy Me a Coffee
+            </a>
+        </p>
+    </footer>
 
 </body>
 </html>
